--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ajv-keywords": "^5.1.0",
     "dompurify": "^3.3.1",
     "react": "^19.2.3",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.2.3",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
